[gd_scene load_steps=5 format=3 uid="uid://1qc4466q8x04"]

[ext_resource type="Script" uid="uid://b6roxje4kffst" path="res://Scenes/Game/Main/GameScene/game_scene.gd" id="1_25uua"]
[ext_resource type="PackedScene" uid="uid://3pbb2ky6xcrw" path="res://Scenes/Game/Main/GameManager/GameManager.tscn" id="2_iju77"]
[ext_resource type="PackedScene" uid="uid://bx6q380fh4ngu" path="res://Scenes/Game/Map/BaseMap/baseMap.tscn" id="3_xofmc"]
[ext_resource type="PackedScene" uid="uid://7x3dhs70f2fg" path="res://Scenes/Game/Map/Map1/map1.tscn" id="4_ktee7"]

[node name="GameScene" type="Node3D"]
script = ExtResource("1_25uua")

[node name="GameManager" parent="." instance=ExtResource("2_iju77")]

[node name="BaseMap" parent="." instance=ExtResource("3_xofmc")]

[node name="Map1" parent="." instance=ExtResource("4_ktee7")]
